--- a/src/components/ui/checkbox/checkbox.module.scss
+++ b/src/components/ui/checkbox/checkbox.module.scss
@@ -1,49 +1,69 @@
+input.defaultCheckbox::before {
+  content: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.66662 10.115L12.7946 3.98633L13.7379 4.92899L6.66662 12.0003L2.42395 7.75766L3.36662 6.81499L6.66662 10.115Z' fill='white'/%3E%3C/svg%3E%0A");
+  fill: currentColor;
+  opacity: 0;
+  height: 16px;
+  width: 16px;
+  top: -2px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0px);
+}
+
+input.defaultCheckbox::before path {
+  fill: currentColor;
+}
+
+input:checked.defaultCheckbox::before {
+  opacity: 1;
+}
+
 .input {
-  @apply defaultCheckbox relative inline-flex h-[20px] min-h-[20px] w-[20px] min-w-[20px] appearance-none items-center justify-center rounded-md border border-gray-300 text-white/0 outline-none transition ease-linear checked:border-none checked:text-white hover:cursor-pointer dark:border-white/10
+  @apply defaultCheckbox relative inline-flex h-[20px] min-h-[20px] w-[20px] min-w-[20px] appearance-none items-center justify-center rounded-md border border-gray-300 text-white/0 outline-none transition ease-linear checked:border-0 checked:text-white hover:cursor-pointer dark:border-white/10;
 
   &Red {
-    @apply checked:border-none checked:bg-red-500 dark:checked:bg-red-400
+    @apply checked:border-none checked:bg-red-500 dark:checked:bg-red-400;
   }
   &Blue {
-    @apply checked:border-none checked:bg-blue-500 dark:checked:bg-blue-400
+    @apply checked:border-none checked:bg-blue-500 dark:checked:bg-blue-400;
   }
   &Green {
-    @apply checked:border-none checked:bg-green-500 dark:checked:bg-green-400
+    @apply checked:border-none checked:bg-green-500 dark:checked:bg-green-400;
   }
   &Yellow {
-    @apply checked:border-none checked:bg-yellow-500 dark:checked:bg-yellow-400
+    @apply checked:border-none checked:bg-yellow-500 dark:checked:bg-yellow-400;
   }
   &Orange {
-    @apply checked:border-none checked:bg-orange-500 dark:checked:bg-orange-400
+    @apply checked:border-none checked:bg-orange-500 dark:checked:bg-orange-400;
   }
   &Teal {
-    @apply checked:border-none checked:bg-teal-500 dark:checked:bg-teal-400
+    @apply checked:border-none checked:bg-teal-500 dark:checked:bg-teal-400;
   }
   &Navy {
-    @apply checked:border-none checked:bg-navy-500 dark:checked:bg-navy-400
+    @apply checked:border-none checked:bg-navy-500 dark:checked:bg-navy-400;
   }
   &Lime {
-    @apply checked:border-none checked:bg-lime-500 dark:checked:bg-lime-400
+    @apply checked:border-none checked:bg-lime-500 dark:checked:bg-lime-400;
   }
   &Cyan {
-    @apply checked:border-none checked:bg-cyan-500 dark:checked:bg-cyan-400
+    @apply checked:border-none checked:bg-cyan-500 dark:checked:bg-cyan-400;
   }
   &Pink {
-    @apply checked:border-none checked:bg-pink-500 dark:checked:bg-pink-400
+    @apply checked:border-none checked:bg-pink-500 dark:checked:bg-pink-400;
   }
   &Purple {
-    @apply checked:border-none checked:bg-purple-500 dark:checked:bg-purple-400
+    @apply checked:border-none checked:bg-purple-500 dark:checked:bg-purple-400;
   }
   &Amber {
-    @apply checked:border-none checked:bg-amber-500 dark:checked:bg-amber-400
+    @apply checked:border-none checked:bg-amber-500 dark:checked:bg-amber-400;
   }
   &Indigo {
-    @apply checked:border-none checked:bg-indigo-500 dark:checked:bg-indigo-400
+    @apply checked:border-none checked:bg-indigo-500 dark:checked:bg-indigo-400;
   }
   &Gray {
-    @apply checked:border-none checked:bg-gray-500 dark:checked:bg-gray-400
+    @apply checked:border-none checked:bg-gray-500 dark:checked:bg-gray-400;
   }
   &Default {
-    @apply checked:bg-brand-400 dark:checked:bg-brand-400
+    @apply checked:bg-brand-400 dark:checked:bg-brand-400;
   }
 }
